patch
- Fixes an issue with the dud removals (committed previously)
- Updated UI to allow output to start at the top of the screen, adding more space before it gets cleared